--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -20,6 +20,13 @@
 .append-popover-contents {
   min-width: 450px;
 }
-.btn-divider {
-  color: #aaa;
+.help-content {
+  max-width: 500px;
+}
+.btn-row {
+  margin-top: 10px;
+  flex-wrap: nowrap;
+  .btn-divider {
+    color: #aaa;
+  }
 }
